[workspace]
resolver = "2"

members = [
    "gaia-stub",
    "structpack",
    "gaia-tmtc",
    "gaia-ccsds-c2a",
    "tmtc-c2a",
    "devtools-frontend",
]

exclude = [
    # WASM 用の別の cargo workspace であるため
    "devtools-frontend/crates",
    # ビルド時はdevtools_frontend/crates が OUT_DIR 以下にコピーされた後wasm-pack buildされるため
    "target",
]

[workspace.package]
version = "0.7.0-beta.5"
description = "A command and control system for C2A-based satellites"
repository = "https://github.com/arkedge/gaia"

[workspace.dependencies]
structpack = "0.6"

gaia-stub = "0.7.0-beta.5"
gaia-ccsds-c2a = "0.7.0-beta.5"
gaia-tmtc = "0.7.0-beta.5"
c2a-devtools-frontend = "0.7.0-beta.5"
