[workspace]
resolver = "2"

members = [
    "gaia-stub",
    "structpack",
    "gaia-tmtc",
    "gaia-ccsds-c2a",
    "tmtc-c2a",
    "devtools-frontend",
]

exclude = [
    # WASM 用の別の cargo workspace であるため
    "devtools-frontend/crates",
    # ビルド時はdevtools_frontend/crates が OUT_DIR 以下にコピーされた後wasm-pack buildされるため
    "target",
]

[workspace.package]
version = "1.1.1"
description = "A command and control system for C2A-based satellites"
repository = "https://github.com/arkedge/gaia"
license = "MPL-2.0"

[workspace.dependencies]
structpack = "1.0"
gaia-stub = "1.0"
gaia-ccsds-c2a = "1.0"
gaia-tmtc = "1.0"
c2a-devtools-frontend = "1.0"
