[package]
name = "c2a-devtools-frontend"
edition = "2021"
version = "0.7.0-beta.3"
license = "MPL-2.0"
description = "C2A Devtools Frontend"
repository = "https://github.com/arkedge/gaia"

[dependencies]
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "debug-embed"] }
wasm-opslang = { path = "crates/wasm-opslang", version = "0.7.0-beta.3" }
