[package]
name = "c2a-devtools-frontend"
version.workspace = true
description.workspace = true
repository.workspace = true
edition = "2021"
license = "MPL-2.0"

[dependencies]
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "debug-embed"] }
opslang-wasm = { path = "crates/opslang-wasm", version = "0.7.0-beta.4" }
