[package]
name = "c2a-devtools-frontend"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path", "debug-embed"] }
opslang-wasm = { path = "crates/opslang-wasm", version = "1.0" }
