[package]
name = "gaia-ccsds-c2a"
version.workspace = true
description.workspace = true
repository.workspace = true
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitvec = "1"
crc = "3"
funty = "2"
modular-bitfield-msb = "0.11"
serde = { version = "1.0", features = ["derive"] }
zerocopy = "0.6"
tlmcmddb = "=2.5.1"
structpack.workspace = true
async-trait = "0.1"
