[package]
name = "gaia-stub"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
