[package]
name = "gaia-tmtc"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.10"
prost-types = "0.12"
gaia-stub = { path = "../gaia-stub" }
serde = { version = "1", features = ["derive"] }
