[package]
name = "gaia-tmtc"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
async-trait = "0.1.80"
chrono = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.11"
prost-types = "0.12"
gaia-stub.workspace = true
serde = { version = "1", features = ["derive"] }
