[package]
name = "structpack"
version = "0.4.0-beta.1"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitvec = "1"
funty = "2"
serde = { version = "1.0", features = ["derive"] }
