[package]
name = "structpack"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
description = "Dynamic bit-field accessor"
documentation = "https://docs.rs/structpack"
repository = "https://github.com/arkedge/gaia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitvec = "1"
funty = "2"
serde = { version = "1.0", features = ["derive"] }
