[package]
name = "structpack"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Dynamic bit-field accessor"
documentation = "https://docs.rs/structpack"
repository = "https://github.com/arkedge/gaia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitvec = "1.0.1"
funty = "2"
serde = { version = "1.0", features = ["derive"] }
