[package]
name = "tmtc-c2a"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty = "2"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "0.2"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.9", features = ["tls", "tls-roots-common", "tls-webpki-roots"] }
tonic-health = "0.9"
tonic-reflection = "0.9"
tonic-web = "0.10"
sentry = { version = "0.31", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }
sentry-tracing = "0.31"
tlmcmddb = "0.2.0"
structpack = "0.5.0"
gaia-ccsds-c2a = { path = "../gaia-ccsds-c2a" }
gaia-tmtc = { path = "../gaia-tmtc" }
kble-socket = { version = "0.2.0", features = ["tungstenite"] }
tokio-tungstenite = "0.18"
itertools = "0.11.0"

[build-dependencies]
tonic-build = "0.9"
