[package]
name = "tmtc-c2a"
version.workspace = true
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty = "2"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "0.2"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = ["tls", "tls-roots-common", "tls-webpki-roots"] }
tonic-health = "0.10"
tonic-reflection = "0.10"
tonic-web = "0.10"
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "debug-embed"] }
mime_guess = "2.0.4"
sentry = { version = "0.31", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }
sentry-tracing = "0.31"
tlmcmddb = "0.2.0"
structpack.workspace = true
gaia-ccsds-c2a.workspace = true
gaia-tmtc.workspace = true
kble-socket = { version = "0.2.0", features = ["tungstenite"] }
tokio-tungstenite = "0.18"
itertools = "0.11.0"
notalawyer = "0.1.0"
notalawyer-clap = "0.1.0"

[build-dependencies]
tonic-build = "0.10"
notalawyer-build = "0.1.0"
