[workspace]
resolver = "2"

members = [
    "wasm-opslang",
]

[workspace.package]
version = "0.7.0-beta.3"
description = "A command and control system for C2A-based satellites"
repository = "https://github.com/arkedge/gaia"

# profile config should be set in workspace root
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
