[package]
name = "wasm-opslang"
version.workspace = true
description.workspace = true
repository.workspace = true
edition = "2021"

links = "wasm-opslang"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "*", features = ["console"] }
opslang-ast = "0.2.1"
opslang-parser = "0.2.1"
async-recursion = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4.31"
regex = "1.10.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
